<resources>
    <string name="app_name">Kaewfa Coffee</string>
    <string name="loginbutton">loginButton</string>
    <string name="get_started">Get started</string>
    <string name="kaewfa_coffee">Kaewfa Coffee</string>
    <string name="kaewfa">kaewfa</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="quickly_create_account">quickly_create_account</string>
    <string name="create_acccout">create_acccout</string>
    <string name="welcome">welcome</string>
    <string name="password">password</string>
    <string name="sign_up">sign_up</string>
    <string name="already_have_an_account">already_have_an_account</string>
    <string name="login2222">login2222</string>
    <string name="create_account">create_account</string>
    <string name="login">login</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account2">Create account</string>
    <string name="quickly_create_account2">Quickly create account</string>
    <string name="already_have_an_account2">Already have an account ?</string>
    <string name="Login">Login</string>
    <string name="Sign_up">Sign up</string>
    <string name="search_keywords">search_keywords</string>
    <string name="notifications">notifications</string>
    <string name="search_history">search_history</string>
    <string name="clear">clear</string>
    <string name="muwiflu">muwiflu</string>
    <string name="muwich">muwich</string>
    <string name="uapah">uapah</string>
    <string name="fruits">fruits</string>
    <string name="mujiflu">mujiflu</string>
    <string name="milk_green_tea">milk_green_tea</string>
    <string name="_55">_55</string>
    <string name="scan_qr_code">scan_qr_code</string>
</resources>